Bug 156829 - FILEOPEN PPTX: (connector) line shows at an odd angle
Summary: FILEOPEN PPTX: (connector) line shows at an odd angle
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bisected, implementationError
: 149784 (view as bug list)
Depends on:
Blocks: PPTX-line-connector-import
  Show dependency treegraph
 
Reported: 2023-08-20 20:29 UTC by Gerald Pfeifer
Modified: 2025-01-07 15:02 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (2.41 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-08-20 20:30 UTC, Gerald Pfeifer
Details
Visual comparison PowerPoint (left) vs Impress (right) (37.88 KB, image/png)
2023-08-20 20:30 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-08-20 20:29:45 UTC
1. Open slide in both Impress and Powerpoint
2. Observe how in Powerpoint all three lines are parallel,
   whereas in Impress the middle one shows at ~45° angle

This looks like a regression.

Looks alright in 

  Version: 7.3.8.0.0+ / LibreOffice Community
  Build ID: 0f7fb0a2decec3f8869098ae5e47ee6055545486
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and back to 6.4.

Exhibits the issue in 

  Version: 7.5.6.0.0+ (X86_64) / LibreOffice Community
  Build ID: 0a5c49aa4f65c8e661f7da3934ab9bea8cacf662
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and

  Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 91358f11ee7e87c8c8290b9507f64d8f90aac3ea
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 1 Gerald Pfeifer 2023-08-20 20:30:07 UTC
Created attachment 189052 [details]
Sample slide (PPTX)
Comment 2 Gerald Pfeifer 2023-08-20 20:30:48 UTC
Created attachment 189053 [details]
Visual comparison PowerPoint (left) vs Impress (right)
Comment 3 raal 2023-08-20 22:09:20 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.4.
Adding Cc: to Nagy Tibor ; Could you possibly take a look at this one?
Thanks
 f0f89cb5c7211e1a166266b7b7a083d685005230 is the first bad commit
commit f0f89cb5c7211e1a166266b7b7a083d685005230
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Mar 29 16:28:25 2022 +0200

    source cbf66ec3e60d07efb7c3cceed9b4f0fb4f0510c8

131303: tdf#89449 PPTX import: fix line connectors | https://gerrit.libreoffice.org/c/core/+/131303
Comment 4 Commit Notification 2023-08-30 09:57:37 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b93531ba7f3edf98a54392cfc83dcf3185888bd

tdf#156829 PPTX import: fix connector regression at missing glue points

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2023-08-31 13:52:37 UTC
Reproduced with yesterday's daily build:

  Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 642f2d7177ea3e6c365da2c2082a50a5137cd988
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

And verified as fixed with today's daily build:

  Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 695ae365dcab7c7dd59b39411299c5c200081885
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Thank you, Tibor!
Comment 6 Commit Notification 2023-09-01 11:33:00 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d13505b8ef7459d97e9f90ee099ca54354d99922

tdf#156829 PPTX import: fix connector regression at missing glue points

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Aron Budea 2023-09-02 01:20:25 UTC
Tibor, could you please backport this to 7.5 as well, since it's a regression?
Comment 8 Gabor Kelemen (Collabora) 2024-02-27 20:36:10 UTC
*** Bug 149784 has been marked as a duplicate of this bug. ***